--- a/.github/workflows/deployment.yml
+++ b/.github/workflows/deployment.yml
@@ -15,11 +15,11 @@ jobs:
         run: npm ci
 
       - name: Lint Check 
-        run: npm lint
+        run: npm run lint
 
       - name: Run test
         run: npm test
-        
+
   deploy:
     needs: test
     runs-on: ubuntu-latest
